Deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end
spec:
  #pod template
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: front-end
    spec:
      containers:
        - name: nginx-container
          image: nginx
  replicas: 3
  #different from replication controller
  #specifies how to identify pods it can acquire
  #replica set can manage pods that are not created as
  # part of the replica set, pods created before replica set that
  # matches the label can also be managed by replica set
  selector:
    matchLabels:
      type: front-end
