env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-env
spec:
  containers:
    - name: simple-env
      image: nginx
      ports:
        - containerPorts: 8080
  volumes:
    - name: config-volume
      configMap:
        name: simple-config #inject config data as files in volume
