liveness-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      ports:
        - containerPorts: 8080
      livenessProbe:
        httpGet:
          path: /api/health
          port: 8080
