pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  labels:
    name: webapp-color
spec:
  #volumes:
  #  - name: app-secret-volume
  #    secret:
  #      secretName: app-secret
  #securityContext:
  #  runAsUser: 1000 #user ID
  tolerations:
    - key: "example-key"
      operator: "Equal"
      value: "blue"
      effect: "NoSchedule"
  containers:
    - name:  webapp-color
      image: kodekloud/webapp-color
      securityContext:
        runAsUser: 1000
        capabilities:
          add: ["MAC_ADMIN"]
      #serviceAccountName: dashboard-sa
      #volumeMounts:
      #  - name: secret-volume
      #    readOnly: true
      #    mountPath: "/etc/secret-volume"
      #env:
      #  - name: APP_COLOR
      #    value: green
      #envFrom:
      #  - configMapRef:
      #      name: app-config
      #envFrom:
      #  - secretRef:
      #      name: app-secret
      #env:
      #  - name: DB_Password
      #    valueFrom:
      #      secretKeyRef:
      #        name: app-secret
      #        key: DB_Password
  nodeSelector:
    size: Large
  affinity:
    nodeAffinity:
      #preferredDuringSchedulingIgnoredDuringExecution
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: disktype
                operator: In
                values:
                  - ssd
