readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      ports:
        - containerPort:8080
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        #tcpSocket:
        #  port: 3306
        #exec:
        #  command:
        #    - cat
        #    - /app/is_ready
        initialDelaySeconds: 10
        periodSeconds: 5
        failureThreshold: 8
