security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep"]
      args: ["3600"]
      securityContext:
        capabilities:
          add: ["SYS_TIME"]
